# tevi

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml
src/: args.cpp  args.hpp  commands.cpp  commands.hpp  live.cpp  live.hpp  main.cpp  print.cpp  print.hpp  render.cpp  render.hpp
src/app/: app_controller.cpp  app_controller.hpp  app_state.hpp
src/render/: pixel.cpp  pixel.hpp
src/services/: camera.cpp  camera.hpp  command_registry.cpp  command_registry.hpp
src/ui/: controller.cpp  controller.hpp  image_canvas.cpp  image_canvas.hpp  view.cpp  view.hpp
src/ui/overlays/: command_line.hpp  status_window.hpp  title_bar.hpp
src/util/: camera.cpp  camera.hpp  data.cpp  data.hpp  fetcher.cpp  fetcher.hpp  logging.cpp  logging.hpp  pixel.cpp  render.cpp  render.hpp
